ADD - Peers list

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -42,6 +42,7 @@
   "chooseLanguage": "Sprache wählen",
   "chooseTheme": "Design wählen",
   "chooseWhatToDelete": "Wählen Sie aus, was gelöscht werden soll:",
+  "client": "Client",
   "collectingData": "Daten werden gesammelt...",
   "comment": "Kommentar",
   "completed": "Abgeschlossen",
