--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -42,6 +42,7 @@
   "chooseLanguage": "Choose Language",
   "chooseTheme": "Choose Theme",
   "chooseWhatToDelete": "Choose what to delete.",
+  "client": "Client",
   "collectingData": "Collecting data...",
   "comment": "Comment",
   "completed": "Completed",
