--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -42,6 +42,7 @@
   "chooseLanguage": "Elegir Idioma",
   "chooseTheme": "Elegir Tema",
   "chooseWhatToDelete": "Elige qué eliminar:",
+  "client": "Cliente",
   "collectingData": "Recolectando datos...",
   "comment": "Comentario",
   "completed": "Completado",
