--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -42,6 +42,7 @@
   "chooseLanguage": "Choisir la Langue",
   "chooseTheme": "Choisir le Thème",
   "chooseWhatToDelete": "Choisissez quoi supprimer.",
+  "client": "Client",
   "collectingData": "Collecte de données...",
   "comment": "Commentaire",
   "completed": "Terminé",
